fix invisible outline for buttons on focus

--- a/src/app/components/result/result.component.css
+++ b/src/app/components/result/result.component.css
@@ -85,6 +85,7 @@ button.btn-clipboard > i.fa-remove {
 
 .filters a {
   margin: 0 0.125rem;
+  border: 0;
 }
 
 .active.info,
